crates/keron-lang/tests/corpus/errors/check/resource_kinds_remain_distinct.keron

val s: Symlink = symlink(from = "a", to = "b")
val f: Template = s
